[package]
name = "laminardb-fraud-detect"
version = "0.1.0"
edition = "2021"
publish = false
description = "Real-time fraud detection system using LaminarDB embedded streaming engine"

[[bin]]
name = "laminardb-fraud-detect"
path = "src/main.rs"

[dependencies]
# LaminarDB (published crates)
laminar-db = "0.1"
laminar-derive = "0.1"
laminar-core = "0.1"

# Arrow (match laminardb workspace versions)
arrow = { version = "57.2", default-features = true }
arrow-array = "57.2"
arrow-schema = "57.2"

# Async
tokio = { version = "1.49", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
chrono = "0.4"
rand = "0.8"

# TUI
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = "0.28"

# Web dashboard
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs"] }
futures = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "throughput"
harness = false
